--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,9 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^3.0.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
