--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,9 +21,12 @@
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-star-rating-component": "^1.4.1",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0"
+    "react-icons": "^4.8.0",
+    "redux-thunk": "^2.4.2",
+    "redux-toolkit": "^1.1.2"
   },
   "devDependencies": {
     "@ant-design/charts": "^1.4.2",
