--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/react-star-rating-component": "^1.4.1",
     "js-cookie": "^3.0.5",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
@@ -36,6 +37,7 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@babel/runtime": "^7.21.5",
+    "@hot-loader/react-dom": "^17.0.2",
     "@material-ui/core": "^4.12.4",
     "@paypal/react-paypal-js": "^7.8.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.10",
@@ -74,6 +76,7 @@
     "react-dropzone": "^14.2.3",
     "react-fast-marquee": "^1.6.0",
     "react-helmet": "^6.1.0",
+    "react-hot-loader": "^4.13.1",
     "react-image-zoom": "^1.3.1",
     "react-lottie": "^1.2.3",
     "react-quill": "^2.0.0",
