--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@emotion/styled": "^11.11.0",
     "@material-ui/data-grid": "^4.0.0-alpha.37",
     "@mui/material": "^5.13.3",
+    "@sentry/react": "^7.55.2",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/react-star-rating-component": "^1.4.1",
@@ -25,6 +26,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.8.0",
     "redux-thunk": "^2.4.2",
     "redux-toolkit": "^1.1.2"
