--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,9 @@
     "start": "webpack serve --config webpack/webpack.config.js --env env=dev",
     "build": "webpack --config webpack/webpack.config.js --env env=prod",
     "lint": "eslint --fix \"./src/**/*.{js,jsx,ts,tsx,json}\"",
+    "test:coverage": "react-scripts test --coverage --runInBand --watchAll=false",
     "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
@@ -45,8 +46,12 @@
     "@stripe/react-stripe-js": "^2.1.0",
     "@stripe/stripe-js": "^1.54.0",
     "@types/antd": "^1.0.0",
+    "@types/enzyme": "^3.10.13",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^29.5.2",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "@types/react-lottie": "^1.2.6",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "antd": "^5.5.1",
@@ -56,6 +61,9 @@
     "copy-webpack-plugin": "^11.0.0",
     "country-state-city": "^3.1.4",
     "css-loader": "^6.7.3",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.7",
+    "enzyme-to-json": "^3.6.2",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -66,6 +74,8 @@
     "html-webpack-plugin": "^5.5.1",
     "husky": "^8.0.3",
     "i": "^0.3.7",
+    "jest": "^29.5.0",
+    "jest-fetch-mock": "^3.0.3",
     "lint-staged": "^13.2.2",
     "node-sass": "^9.0.0",
     "npm": "^9.6.7",
@@ -84,6 +94,7 @@
     "react-redux": "^8.0.5",
     "react-refresh": "^0.14.0",
     "react-router-dom": "^6.11.2",
+    "react-test-renderer": "^18.2.0",
     "react-toastify": "^9.1.3",
     "sass": "^1.62.1",
     "sass-loader": "^13.3.0",
@@ -91,6 +102,7 @@
     "style-loader": "^3.3.2",
     "tailwindcss": "^3.3.2",
     "timeago.js": "^4.0.2",
+    "ts-jest": "^29.1.0",
     "typescript": "^5.0.4",
     "url-loader": "^4.1.1",
     "webpack": "^5.84.0",
@@ -110,6 +122,17 @@
     ],
     "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
       "prettier --write"
+    ]
+  },
+  "jest": {
+    "transform": {
+      ".(ts|tsx)": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testRegex": "(/tests/.*|\\.(test|spec))\\.(ts|tsx|js)$",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js"
     ]
   }
 }
