--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 -# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
+frontend/node_modules
+frontend/build
+backend/node_modules
+socket/node_modules
 /.pnp
 .pnp.js
 
